# Reaction-Role

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.py  docker-compose.yaml  flake.nix  readme.md  requirements.txt  run.py
.github/: renovate.json5
.github/workflows/: deploy.yml  tests.yml  version_bump.yml
bot/: Cargo.toml
bot/src/: lib.rs  run.rs
bot/src/config/: bot_config.rs  config.rs  lang.rs  mod.rs  reaction_roles.rs
bot/src/events/: mod.rs  reaction_logger.rs  reaction_roles.rs
bot/src/features/: info.rs  mod.rs  presence.rs  reaction_logger.rs  reaction_roles.rs
bot/src/features/exp_system/: commands.rs  formatting.rs  io.rs  levels.rs  message_handler.rs  mod.rs
bot/src/utils/: color.rs  formatting.rs  io.rs  mod.rs
config/: config.cfg  config.example.cfg  config.example.yaml  lang.example.py  lang.example.yaml  reaction_roles.example.yaml  reaction_roles.py
extensions/: EmojiLogger.py  Main.py  ReactionLogger.py  ReactionRoles.py
src/: main.rs
utils/: PrintHandler.py  VersionHandler.py  __init__.py
