[package]
name = "reaction-role"
version = "1.0.23"
readme.workspace = true
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
bot = { path = "bot" }

anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true

dotenvy = "0.15.7"
tracing-subscriber = "0.3.19"
color-eyre = "0.6.3"

[workspace]
members = ["bot"]

[workspace.lints.clippy]
multiple_crate_versions = { level = "allow", priority = 1 }

style = "deny"
complexity = "deny"
perf = "deny"
cargo = "deny"
correctness = "deny"
use_self = "deny"

[workspace.package]
edition = "2024"
authors = ["Arthur De Witte <dev@arthurdw.com>"]
license = "MIT"
repository = "https://github.com/Arthurdw/Reaction-Role"
categories = ["discord", "bot"]
keywords = ["discord", "bot", "reaction", "role"]
description = "An easy to use discord.py reaction role bot, easy to configure!"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.98"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
tracing = "0.1.41"
